# tsv_matome

./: .gitattributes  .gitignore  CLAUDE.md  CODE_QUALITY_GUIDE.md  COMPLEX_SEARCH_IMPROVEMENTS.md  HISTORY.md  README.md  REFACTORING_SIMPLE.md  REFACTORING_SPEC.md  SOLUTION_SUMMARY.md  SPEC.md  SPEC_TMSONAR.md  SYSTEM_IMPROVEMENTS_SUMMARY.md  TEST_ISSUES_REPORT.md  USAGE.md  advanced_unknown_analyzer.py  analyze_applicant_data.py  analyze_coverage_gaps.py  analyze_current_challenges.py  analyze_current_state.py  analyze_enhanced_trademark_display.py  analyze_missing_applicant_files.py  analyze_trademark_display.py  app_dynamic_join_claude_optimized.py  app_enhanced.py  app_simple_fixed.py  applicant_code_analysis.py  auto_check.py  autonomous_system_launcher.py  build_applicant_master.py  build_enhanced_index.py  build_reg_mapping.py  c&p.txt  check_2024061720.ps1  check_2024061720.sql  check_applicant_data.py  check_data_samples.py  check_db_now.py  check_db_schema.py  check_duplicate_issue.py  (+141 more)
.claude/: settings.json
TMSONAR_html/: メイン検索画面.txt  併存登録検索.txt  全文検索画面.txt  商品役務支援.txt  商品役務支援_スマートフォン.txt  図形検索画面.txt  検索結果.txt  検索結果_設定画面の表示.txt  称呼類似検索Pro.txt  称呼類似検索Std.txt
analysis_reports/: tmcloud_critical_issues_20250729_0740.md  tmcloud_quality_report_20250729_1600.md
csvs/: （別添3.3）ファイル仕様書_1.13版_001_特許出願事件ファイル.csv  （別添3.3）ファイル仕様書_1.13版_002_特許出願事件繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_003_特許事件ステータスファイル.csv  （別添3.3）ファイル仕様書_1.13版_004_特許出願人発の事件書誌ファイル.csv  （別添3.3）ファイル仕様書_1.13版_005_特許出願人発の事件書誌繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_006_特許特許庁発の事件書誌ファイル.csv  （別添3.3）ファイル仕様書_1.13版_007_特許特許庁発の事件書誌繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_008_特許出願書類ファイル.csv  （別添3.3）ファイル仕様書_1.13版_009_特許旧事件ステータスファイル.csv  （別添3.3）ファイル仕様書_1.13版_010_特許旧出願事件ファイル.csv  （別添3.3）ファイル仕様書_1.13版_011_特許旧事件書誌ファイル.csv  （別添3.3）ファイル仕様書_1.13版_012_特許旧事件書誌繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_013_特許異議情報ファイル.csv  （別添3.3）ファイル仕様書_1.13版_014_特許異議情報繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_015_実用出願事件ファイル.csv  （別添3.3）ファイル仕様書_1.13版_016_実用出願事件繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_017_実用事件ステータスファイル.csv  （別添3.3）ファイル仕様書_1.13版_018_実用出願人発の事件書誌ファイル.csv  （別添3.3）ファイル仕様書_1.13版_019_実用出願人発の事件書誌繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_020_実用特許庁発の事件書誌ファイル.csv  （別添3.3）ファイル仕様書_1.13版_021_実用特許庁発の事件書誌繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_022_実用出願書類ファイル.csv  （別添3.3）ファイル仕様書_1.13版_023_実用旧事件ステータスファイル.csv  （別添3.3）ファイル仕様書_1.13版_024_実用旧出願事件ファイル.csv  （別添3.3）ファイル仕様書_1.13版_025_実用旧事件書誌ファイル.csv  （別添3.3）ファイル仕様書_1.13版_026_実用旧事件書誌繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_027_実用異議情報ファイル.csv  （別添3.3）ファイル仕様書_1.13版_028_実用異議情報繰返データファイル.csv  （別添3.3）ファイル仕様書_1.13版_029_国際出願の事件ステータスファイル.csv  （別添3.3）ファイル仕様書_1.13版_030_国際出願書類ファイル.csv  （別添3.3）ファイル仕様書_1.13版_031_IB中間記録ファイル.csv  （別添3.3）ファイル仕様書_1.13版_032_公報関連情報ファイル.csv  （別添3.3）ファイル仕様書_1.13版_033_申請人情報ファイル.csv  （別添3.3）ファイル仕様書_1.13版_034_ABC情報ファイル.csv  （別添3.3）ファイル仕様書_1.13版_035_事件フォルダ_意匠ファイル.csv  （別添3.3）ファイル仕様書_1.13版_036_事件フォルダ_意匠_優先権情報ファイル.csv  (+162 more)
history/: conversation_history_20250703.md  (+3 more)
(+99 files in other folders)
